# c4dynamics

./: .coverage  .gitignore  CHANGELOG.md  README.md  contributing.md  pyproject.toml  requirements-dev.txt  requirements-vision.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: paper.yml  run-tests.yml
c4dynamics/: __init__.py
c4dynamics/datasets/: __init__.py  _manager.py  _registry.py
c4dynamics/detectors/: __init__.py  yolo3_opencv.py
c4dynamics/envs/: __init__.py  mountain_car.py
c4dynamics/eqm/: __init__.py  derivs.py  integrate.py
c4dynamics/filters/: __init__.py  ekf.py  kalman.py  lowpass.py
c4dynamics/rotmat/: __init__.py  animate.py  rotmat.py
c4dynamics/sensors/: __init__.py  lineofsight.py  radar.py  seeker.py
c4dynamics/states/: __init__.py  state.py
c4dynamics/states/lib/: __init__.py  datapoint.py  pixelpoint.py  rigidbody.py
c4dynamics/utils/: __init__.py  _struct.py  const.py  cprint.py  gen_gif.py  idx2keys.py  images_loader.py  math.py  plottools.py  plottracks.py  printpts.py  slides_gen.py  tictoc.py  video_gen.py  vidgen.py
docs/: .buildinfo  genindex.html  gettingstarted.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst
docs/_sources/api/: introduction.rst
docs/_sources/concepts/: filters.rst
docs/_sources/programs/: ballistic_coefficient.ipynb  mpc_steering.ipynb
docs/_sources/tsipor/: tsipor.rst
docs/_sources/tutorials/: setup_guide.ipynb
docs/_static/: documentation_options.js
docs/api/: Datasets.html  Detectors.html  Filters.html  Sensors.html  States.html  Utils.html  detectors.yolov3.html  eqm.html  filters.ekf.html  filters.kalman.html  filters.lpf.html  index.html  introduction.html  rotmat.html  sensors.radar.html  sensors.seeker.html  states.lib.datapoint.html  states.lib.html  states.lib.pixelpoint.html  states.lib.rigidbody.html  states.state.html  utils.const.html  utils.math.html
docs/concepts/: filters.html  kinematics.html  rl_env.html  sensors.html  states.html  transformations.html
docs/programs/: ballistic_coefficient.html  ballistic_coefficient.ipynb  dof6sim.html  dof6sim.ipynb  mpc_steering.html  mpc_steering.ipynb
docs/source/: conf.py  index.rst
docs/source/concepts/: filters.rst
docs/source/programs/: dof6_modules.py  dof6sim.ipynb  environments.py  helicopter_rl.ipynb  helicopter_rlc_blf.ipynb  learning_controller.ipynb.ipynb  mpc-steering.ipynb  mpc_steering.ipynb
docs/source/tsipor/: tsipor.rst
docs/tsipor/: tsipor.html
docs/tutorials/: introduction_guide.html  setup_guide.html
examples/: animate.py  autopilot.py  datasets.py  pendulum.py  rl.py  rotmat.py  utils.py
examples/detectors/: yolov3.py
examples/eqm/: dervis.py  integrate.py
examples/filters/: book_format.py  lpf.py
examples/filters/ekf/: intro.py  predict_method.py  store_method.py  update_method.py
examples/filters/kf/: intro.py  predict_method.py  update_method.py
examples/filters/module/: extended_kalman.py  kalman.py  lowpass.py
examples/sensors/: radar.py  seeker.py
examples/states/: states.py
examples/states/lib/: datapoint.py  lib.py  pixelpoint.py  rigidbody.py
examples/states/state/: X.py  X0.py  addvars.py  data.py  dist.py  norm.py  normalize.py  plot.py  position.py  store.py  storeparams.py  timestate.py  vel_mag.py  velocity.py
tests/: dependencies_test.ps1  run_doctests.py  run_unittests.py  test_animate.py  test_const.py  test_cprint.py  test_datapoint.py  test_datasets.py  test_derivs.py  test_ekf.py  test_gen_gif.py  test_integrate.py  test_kalman.py  test_lowpass.py  test_math.py  test_pixelpoint.py  test_plotdefaults.py  test_radar.py  test_rigidbody.py  test_rotmat.py  test_seeker.py  test_state.py  test_state_assignment.py  test_state_assignment_strict.py  test_tictoc.py  test_yolov3_opencv.py
(+20 files in other folders)
