[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c4dynamics"
version = "2.3.4"
description = "Python framework for state-space modeling and algorithm development"
authors = [{name = "Ziv Meri", email="zivmeri@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
  "matplotlib>=3.9.2", 
  "numpy>=1.26.0", 
  "pooch>=1.8.0",
  "scipy>=1.13.0"
]
[project.optional-dependencies]
vision = [
    "matplotlib>=3.9.2", 
    "numpy>=1.26.0", 
    "pooch>=1.8.0",
    "scipy>=1.13.0", 
    "imageio>=2.37.0",
    "natsort>=8.3.1",
    "opencv-python>=4.11.0.86",
]
dev = [
    "matplotlib>=3.9.2", 
    "numpy>=1.26.0", 
    "pooch>=1.8.0",
    "scipy>=1.13.0", 
    "imageio>=2.37.0",
    "natsort>=8.3.1",
    "opencv-python>=4.11.0.86",
    "coverage>=7.0.0", 
    "nbsphinx>=0.9.3",
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx_design>=0.6.1",
]

keywords = ['python', 'state-space', 'dynamics', 'physics', 'algorithms', 'control', 'navigation', 'guidance', 'slam', 'vslam', 'computer-vision', 'image-processing', 'signal-processing']
dynamic = ["classifiers"]

[tool.setuptools.dynamic]
classifiers = { file = "CLASSIFIERS.txt" }

[tool.ruff]
line-length = 100
exclude = [
    "docs",
    "tests",
    "examples",
    "*.md",
    "*.png",
    "c4dynamics/utils/video_gen.py", 
    "c4dynamics/envs/mountain_car.py"
]