[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "c4dynamics"
version = "2.3.6"
description = "Python framework for state-space modeling and algorithm development"
authors = [{name = "Ziv Meri", email="zivmeri@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = "MIT"

dependencies = [
  "matplotlib>=3.9.2",
  "numpy>=1.26.0",
  "pooch>=1.8.0",
  "scipy>=1.13.0"
]

keywords = ['python', 'state-space', 'dynamics', 'physics', 'algorithms',
            'control', 'navigation', 'guidance', 'slam', 'vslam',
            'computer-vision', 'image-processing', 'signal-processing'
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
include = ["c4dynamics*"]


[tool.setuptools.package-data]
"c4dynamics.detectors" = ["*.cfg"]


[project.optional-dependencies]
vision = [
    "imageio>=2.37.0",
    "natsort>=8.3.1",
    "opencv-python>=4.11.0.86",
]

dev = [
    "c4dynamics[vision]",
    "coverage>=7.0.0",
    "nbsphinx>=0.9.3",
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx_design>=0.6.1",
]


[tool.ruff]
line-length = 100
exclude = [
    "docs",
    "tests",
    "examples",
    "*.md",
    "*.png",
    "c4dynamics/utils/video_gen.py",
    "c4dynamics/envs/mountain_car.py"
]


[project.urls]
Homepage = "https://github.com/c4dynamics/c4dynamics/discussions"
Documentation = "https://c4dynamics.github.io/c4dynamics/"
Source = "https://github.com/c4dynamics/c4dynamics"
Issues = "https://github.com/c4dynamics/c4dynamics/issues"

