[flake8]
max-line-length = 100
per-file-ignores =
    c4dynamics/__init__.py: F401
exclude =
    docs,
    tests,
    examples,
    *.md,
    *.png,
    c4dynamics/utils/video_gen.py,
    c4dynamics/utils/slides_gen.py,
    c4dynamics/utils/printpts.py,
    c4dynamics/utils/plottracks.py,
    c4dynamics/envs/mountain_car.py
    .\untracked
    .\c4dynamics-*.*


[options.package_data]
c4dynamics.detectors = *.cfg


